Fix HTML formatting and improve paragraph structure

--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
           in Artificial
           Intelligence (cum laude) from the University of Amsterdam</a> and an <a
           href="https://www.auth.gr/en/school/ee-en/">MEng
-          in Electrical & Computer Engineering from Aristotle University of Thessaloniki</a>. My research focuses on
+          in Electrical & Computer Engineering from Aristotle University of Thessaloniki</a>. 
+        </p>
+      <p>My research focuses on
         computer vision, with emphasis on representation learning (disentanglement, object-centric methods) and
         generative techniques, including diffusion models and VAEs.
       </p>
