--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </header>
     <main id="main" role="main">
       <h3><a id="Affiliation" class="anchor" href="#Affiliation" aria-hidden="true"><span
-            class="octicon octicon-link"></span></a>Affiliation</h3>
+            class="octicon octicon-link"></span></a>About</h3>
       <p>
         I am an AI Research Scientist and Engineer with a cross-disciplinary background in electrical engineering,
         computer engineering, and artificial intelligence. I hold an <a
